--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1,107 +1,128 @@
-# Default values for podiumd.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
+keycloak:
+  enabled: true
+  postgresql:
+    enabled: false
 
-replicaCount: 1
+openzaak:
+  enabled: true
+  configuration:
+    initContainer:
+      enabled: true
+    cronjob:
+      enabled: false
+  nameOverride: open-zaak
+  image:
+    tag: 1.12.3
+  resources:
+    requests:
+      cpu: 100m
+      memory: 400Mi
+  flower:
+    enabled: false
+  redis:
+    nameOverride: open-zaak-redis
 
-image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+opennotificaties:
+  enabled: true
+  configuration:
+    initContainer:
+      enabled: true
+    cronjob:
+      enabled: false
+  nameOverride: open-notificaties
+  image:
+    tag: 1.5.2
+  resources:
+    requests:
+      cpu: 10m
+      memory: 200Mi
+  flower:
+    enabled: false
+  rabbitmq:
+    nameOverride: open-notificaties-rabbitmq
+    auth:
+      username: guest
+      password: guest
+      erlangCookie: SUPER-SECRET
+  redis:
+    nameOverride: open-notificaties-redis
 
-imagePullSecrets: []
-nameOverride: ""
-fullnameOverride: ""
+objecten:
+  enabled: true
+  image:
+    tag: 2.3.1
+  resources:
+    requests:
+      cpu: 10m
+      memory: 250Mi
+  settings:
+    disable2fa: true
+  flower:
+    enabled: false
+  redis:
+    nameOverride: objecten-redis
 
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: true
-  # Automatically mount a ServiceAccount's API credentials?
-  automount: true
-  # Annotations to add to the service account
-  annotations: {}
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name: ""
+objecttypen:
+  enabled: true
+  image:
+    tag: 2.1.2
+  resources:
+    requests:
+      cpu: 10m
+      memory: 250Mi
+  settings:
+    twoFactorAuthentication:
+      forceOtpAdmin: false
+      patchAdmin: false
 
-podAnnotations: {}
-podLabels: {}
+openforms:
+  enabled: true
+  image:
+    tag: 2.6.6
+  nameOverride: open-forms
+  resources:
+    requests:
+      cpu: 10m
+      memory: 600Mi
+  settings:
+    twoFactorAuthentication:
+      forceOtpAdmin: false
+      patchAdmin: false
+  flower:
+    enabled: false
+  redis:
+    nameOverride: open-forms-redis
 
-podSecurityContext: {}
-  # fsGroup: 2000
+openklant:
+  enabled: true
+  image:
+    tag: 2.0.0
+  nameOverride: open-klant
+  resources:
+    requests:
+      cpu: 10m
+      memory: 600Mi
+  settings:
+    twoFactorAuthentication:
+      forceOtpAdmin: false
+      patchAdmin: false
+  redis:
+    nameOverride: open-klant-redis
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
-
-service:
-  type: ClusterIP
-  port: 80
-
-ingress:
-  enabled: false
-  className: ""
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  hosts:
-    - host: chart-example.local
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
-
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #   cpu: 100m
-  #   memory: 128Mi
-  # requests:
-  #   cpu: 100m
-  #   memory: 128Mi
-
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
-
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
-# Additional volumes on the output Deployment definition.
-volumes: []
-# - name: foo
-#   secret:
-#     secretName: mysecret
-#     optional: false
-
-# Additional volumeMounts on the output Deployment definition.
-volumeMounts: []
-# - name: foo
-#   mountPath: "/etc/foo"
-#   readOnly: true
-
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
+openinwoner:
+  enabled: true
+  image:
+    tag: 1.16.5
+  nameOverride: open-inwoner
+  resources:
+    requests:
+      cpu: 10m
+      memory: 600Mi
+  settings:
+    twoFactorAuthentication:
+      forceOtpAdmin: false
+      patchAdmin: false
+  redis:
+    nameOverride: open-inwoner-redis
+  elasticsearch:
+    nameOverride: open-inwoner-elasticsearch
