--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,6 +24,8 @@ jobs:
       - name: Add dependency chart repos
         run: |
           helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo add maykinmedia https://maykinmedia.github.io/charts
+          helm repo add opentelemetry https://open-telemetry.github.io/opentelemetry-helm-charts
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
