--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -8,6 +8,7 @@ dependencies:
   - name: keycloak
     version: 21.2.2
     repository: https://charts.bitnami.com/bitnami
+    condition: keycloak.enabled
   - name: openzaak
     version: 1.3.1
     repository: https://maykinmedia.github.io/charts
