Refactor Add creation of kanalen

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1,5 +1,10 @@
+configuration:
+  enabled: true
+
 keycloak:
   enabled: true
+  nameOverride: keycloak
+  fullnameOverride: keycloak
   postgresql:
     enabled: false
   keycloakConfigCli:
