--- a/charts/podiumd/templates/http-request-files-configmap.yaml
+++ b/charts/podiumd/templates/http-request-files-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configuration.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -6,3 +7,4 @@ metadata:
     {{- include "podiumd.labels" . | nindent 4 }}
 data:
   {{ .Files.AsConfig | nindent 4 }}
+{{- end }}
