--- a/charts/podiumd/templates/http-request-job.yaml
+++ b/charts/podiumd/templates/http-request-job.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.configuration.enabled -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -76,4 +77,4 @@ spec:
         - name: http-request-files-volume
           configMap:
             name: http-request-files-configmap
-
+{{- end }}
