--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.keycloak.keycloakConfigCli.enabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -203,3 +204,4 @@ data:
                     mapped.group.attributes:
                       - description,email
       {{- end }}
+  {{- end }}
