Updated Helm chart to be up-to-date with Hel Chart of Info

--- a/charts/zac/values.yaml
+++ b/charts/zac/values.yaml
@@ -36,16 +36,12 @@ gemeente:
 
 # mail Configuration email sending connection
 mail:
-  # API and secret key used for sending mail via mailjet (https://www.mailjet.com)
-  mailjet:
-    apiKey: ""
-    secretKey: ""
   # SMTP server and port will be required after phasing out mailjet
   smtp:
-    server: "" # when using mailjet use in-v3.mailjet.com
-    port: "25" # when using mailjet use port 587
-    username: "" # when using mailjet same as mailjet.apiKey
-    password: "" # when using mailjet same as mailjet.secretKey
+    server: "" # SMTP server host (for example localhost or in-v3.mailjet.com)
+    port: "587" # port 587 for TLS, port 25 for relaying
+    username: ""
+    password: ""
 
 # zgwApis Configuration of ZGW API's provider (Open Zaak)
 zgwApis:
